<package format="2">
  <name>subt_ign</name>
  <version>0.1.0</version>
  <description>The ROS package for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ignition-common3</depend>
  <depend>ignition-launch1</depend>
  <depend>ignition-math6</depend>
  <depend>ignition-msgs4</depend>
  <depend>ignition-plugin1</depend>
  <depend>ignition-transport7</depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>subt_msgs</depend>

  <depend>subt_rf_interface</depend>
  <depend>subt_communication_model</depend>
  <depend>subt_communication_broker</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
