<package format="2">
  <name>subt_msgs</name>
  <version>0.1.0</version>
  <description>The ROS messages for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
